--- a/theme.html
+++ b/theme.html
@@ -159,7 +159,7 @@
           </div>
           {% endif %}
           {% else %}
-          <h4 class="sub-heading span6">No Posts Yet :(</h4>
+          <h4 class="sub-heading span6">Ничего нет :(</h4>
           {% endif %}
       </div>
 
