--- a/theme.html
+++ b/theme.html
@@ -398,15 +398,15 @@ border="0" height="18" width="88" alt="Рейтинг@Mail.ru"></a>
           </div>
         </div>
       </div>
-
+пример 1
     {% endif %}
-
+пример 2
     </div>
-
+пример 3
     {% endif %}
-    
+пример 4    
     {{ footer_meta }}
-
+пример6
     <!-- bootstrap -->
     <script src="http://postach.io/static/themes/_assets/bootstrap/js/bootstrap.min.js" /></script>
     
