--- a/theme.html
+++ b/theme.html
@@ -382,11 +382,10 @@ border="0" height="18" width="88" alt="Рейтинг@Mail.ru"></a>
     {% endif %}
 пример 2
 
-<ul>
-<li><a href="/">Главная</a></li>
-<li><a href="/reklama" class="inactive">Реклама</a></li>
-<li><a href="/voprosnik" class="inactive">Вопросник</a></li>
-<li><a href="/tag/ekonomika-predpriiatii-neftegazovoi-otrasli">Экономика предприятий нефтегазовой отрасли</a></li>
+<a href="/">Главная</a>
+<a href="/reklama" class="inactive">Реклама</a>
+<a href="/voprosnik" class="inactive">Вопросник</a>
+<a href="/tag/ekonomika-predpriiatii-neftegazovoi-otrasli">Экономика предприятий нефтегазовой отрасли</a>
  <li><a href="/tag/politologiia">Политология</a></li>
   <li><a href="/tag/gidromashiny-i-kompressory">Гидромашины и компрессоры</a></li>
    <li><a href="/tag/gidravlika">Гидравлика</a></li>
