--- a/theme.html
+++ b/theme.html
@@ -86,7 +86,7 @@ _tmr.push({id: "2472136",  type: "pageView", start: (new Date()).getTime()});
   
   
   <body>
-
+пример13
     {% if is_login %}
 
       {{ login_form }}
@@ -94,10 +94,12 @@ _tmr.push({id: "2472136",  type: "pageView", start: (new Date()).getTime()});
     {% else  %}
 
     <div class="row">
+    пример14
       <div class="span4 header">
+      приер15
         <div class="bg-img" style="background-image: url('{% if site.cover_photo %}{{ site.cover_photo }}{% else %}{{ assets('images/background.jpg') }}{% endif %}');"></div>
-        <div class="gradient"></div>
-        <div class="title">
+        пример16<div class="gradient"></div>
+       пример17 <div class="title">
           <h1>{{ site.name }}</h1>
           <ul class="social">
             {% if site.twitter %}
@@ -137,8 +139,7 @@ _tmr.push({id: "2472136",  type: "pageView", start: (new Date()).getTime()});
               </a>
             </li>
           </ul>
-
-        
+пример18
         <div class="site-description">
           <ul>
     Воспользуйтесь поиском по сайту
@@ -162,19 +163,25 @@ _tmr.push({id: "2472136",  type: "pageView", start: (new Date()).getTime()});
           <li><a href="{{ page.permalink }}" class="{{ set_active(page.permalink) }}">{{ page.title }}</a></li>
           {% endfor %}
           {% endif %}
+          
           </ul>
+          прпрп19
         </div>
+        иапиапиа20
       </div>
+      пиапипи21
     </div>
+    титимтми22
 </div>
+титимтимт23
     <div class="row wrapper">
-
+тититим24
       <div class="span4 spacer"></div>
-
+ммм25
       {% if is_home or is_tag %}
-
+мимип26
       <div class="span6 offset1 posts">
-
+пиипи27
           {% if is_tag %}
           <h4 class="sub-heading span6">Все статьи с меткой {{ tag }}:</h4>
           {% endif %}
