--- a/theme.html
+++ b/theme.html
@@ -356,8 +356,8 @@ style="width:80px; height:15px; border:0;" alt="Яндекс.Метрика" tit
 border="0" height="18" width="88" alt="Рейтинг@Mail.ru"></a>
 <!-- //Rating@Mail.ru logo -->
 <a href="http://yandex.ru/cy?base=0&amp;host=gosnik.postach.io"><img src="http://www.yandex.ru/cycounter?gosnik.postach.io" width="88" height="31" alt="Яндекс цитирования" border="0" /></a>.
-
-
+</div>
+<div>
 <a href="/">Главная</a>
 <a href="/reklama" class="inactive">Реклама</a>
 <a href="/voprosnik" class="inactive">Вопросник</a>
@@ -379,7 +379,7 @@ border="0" height="18" width="88" alt="Рейтинг@Mail.ru"></a>
 <a href="/tag/kak-napisat-diplom">Как написать диплом?</a>
 <a href="/tag/operator-po-dobyche-nefti-i-gaza"> Оператор по добыче нефти</a>
 
-
+</div>
 <div class="copyright"><p class="center">Все права защищены &copy; <a href="/">Машины и оборудование нефтяных и газовых промыслов</a>.</p></div>
           {% endif %}
         </div>
