--- a/theme.html
+++ b/theme.html
@@ -141,6 +141,15 @@ _tmr.push({id: "2472136",  type: "pageView", start: (new Date()).getTime()});
           </ul>
           
         <div class="site-description">
+<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- expl-remont -->
+<ins class="adsbygoogle"
+     style="display:inline-block;width:300px;height:600px"
+     data-ad-client="ca-pub-7494488769984810"
+     data-ad-slot="9643710840"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script>
           <ul>
     Воспользуйтесь поиском по сайту
       <form action="http://www.google.ru" id="cse-search-box">
